--- a/2048-SDL/2048-SDL.vcxproj
+++ b/2048-SDL/2048-SDL.vcxproj
@@ -30,6 +30,7 @@
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
+    <UseOfMfc>Static</UseOfMfc>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -71,6 +72,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>D:\SDL2-2.0.5\ExceptLib\SDL2_gfx-1.0.3\include;D:\SDL2-2.0.5\ExceptLib\SDL2_image-2.0.1\include;D:\SDL2-2.0.5\ExceptLib\SDL2_mixer-2.0.1\include;D:\SDL2-2.0.5\ExceptLib\SDL2_ttf-2.0.14\include;D:\SDL2-2.0.5\include;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\SDL2-2.0.5\ExceptLib\SDL2_gfx-1.0.3\lib;D:\SDL2-2.0.5\ExceptLib\SDL2_image-2.0.1\lib\x86;D:\SDL2-2.0.5\ExceptLib\SDL2_mixer-2.0.1\lib\x86;D:\SDL2-2.0.5\ExceptLib\SDL2_ttf-2.0.14\lib\x86;D:\SDL2-2.0.5\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
@@ -142,6 +145,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="functions.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="mainloop.cpp" />
+    <ClCompile Include="Music.cpp" />
+    <ClCompile Include="Picture.cpp" />
+    <ClCompile Include="Scene.cpp" />
+    <ClCompile Include="Window.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="function.h" />
+    <ClInclude Include="Music.h" />
+    <ClInclude Include="Picture.h" />
+    <ClInclude Include="Scene.h" />
+    <ClInclude Include="Window.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
